# NovaGraph

./: .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
backend/: config.py  main.py
backend/agents/: entity_resolver.py  graph_agent.py  prompt_architect.py  synthesizer.py  vector_agent.py
backend/db/: document_registry.py  models.py
backend/extractor/: domain_detector.py  entity_extractor.py
backend/graph/: neo4j_client.py  neo4j_queries.py  neo4j_writer.py  schema_init.py
backend/lifecycle/: __init__.py  cleanup.py
backend/parser/: pdf_parser.py
backend/vector/: embedder.py  pinecone_store.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChatInterface.jsx  DashboardPage.jsx  GraphPage.jsx  GraphView.jsx  LandingPage.jsx  PromptArchitectCards.jsx  Sidebar.jsx  TraceView.jsx  UploadModal.jsx  UploadPanel.jsx
frontend/src/pages/: ChatPage.jsx  GraphPage.jsx  LandingPage.jsx
frontend/src/store/: appStore.js
infra/neo4j/: init.cypher
tests/: conftest.py  test_agents.py  test_api.py  test_data_isolation.py  test_document_registry.py  test_extractor.py  test_parser.py  test_prompt_architect.py  test_prompt_architect_api.py  test_retrieval_pipeline.py  test_upload_deduplication.py
